# test-sam-build

./: .gitignore  README.md  output.txt  pyproject.toml  template.yaml  test.txt
.github/workflows/: array-join.yml  branching.yml  call-event-inputs.yml  call-unit-test.yml  called.yml  calling.yml  check-sam.yml  continue-skip.yml  custom-js-action.yml  download-artifact.yml  echo-newline.yml  event-inputs.yml  get-last-run-status.yml  get-release.yml  input-list.yml  input-matrix.yml  interpolation-order.yml  lower-to-upper.yml  migrate-db-v1.yml  migrate-db.yml  pass-secrets.yml  pull-request.yml  python-n-aws.yml  runner-ip.yml  sam-build.yml  sceptre-deploy.yml  string-concatenation.yml  test-echo.yaml  test-qemu.yml  test-user.yaml  test3.yml  unit-test.yml  upload-release.yml  write-to-file.yml
database/: README.md  docker-compose.yaml  init.sql
database/flywayfiles/conf/: flyway.conf
database/flywayfiles/sql/: V0001__Init_Schemas.sql  V0002__Create_Table.sql  V0003__Insert_Value.sql  V0004__Verify_schema_history_table.sql  V0005__Insert_into_verify_table.sql  V0006__Insert_ecr_info.sql
docker/: Dockerfile
sceptre/: vars.yaml
sceptre/config/: config.yaml
sceptre/config/dev/: s3.yaml
sceptre/templates/: s3.yaml
scripts/: check_ip.py  generate_hash.py
src/: mod1.py
tests/: test_mod1.py
