[tool.poetry]
name = "sam-for-build"
version = "0.1.0"
description = ""
authors = ["xueke477 <xueke.kent@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
pytest-cov = "^3.0.0"
sceptre = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
